--- a/_data/dependencies/federal/asc-csa.yaml
+++ b/_data/dependencies/federal/asc-csa.yaml
@@ -1,5 +1,8 @@
+---
 - dependencies:
     core: {}
     dev: {}
     peer: {}
-  name: {en: Apogy, fr: Apogy}
+  name:
+    en: Apogy
+    fr: Apogy
