--- a/_data/dependencies/federal/nrc-cnrc.yaml
+++ b/_data/dependencies/federal/nrc-cnrc.yaml
@@ -1,5 +1,8 @@
+---
 - dependencies:
     core: {}
     dev: {}
     peer: {}
-  name: {en: EGSnrc, fr: EGSnrc}
+  name:
+    en: EGSnrc
+    fr: EGSnrc
