--- a/_data/dependencies/federal/cse-cst.yaml
+++ b/_data/dependencies/federal/cse-cst.yaml
@@ -1,10 +1,15 @@
+---
 - dependencies:
     core: {}
     dev: {}
     peer: {}
-  name: {en: Spartacus, fr: Spartacus}
+  name:
+    en: Spartacus
+    fr: Spartacus
 - dependencies:
     core: {}
     dev: {}
     peer: {}
-  name: {en: Assemblyline, fr: Assemblyline}
+  name:
+    en: Assemblyline
+    fr: Assemblyline
