Some changes to script to simplify work on the html page and page update
Datatable seems to be having issues with the large number of rows given to it

--- a/_data/dependencies/federal/cse-cst.yaml
+++ b/_data/dependencies/federal/cse-cst.yaml
@@ -1,15 +1,11 @@
 ---
-- dependencies:
-    core: {}
-    dev: {}
-    peer: {}
+adminCode: cse-cst
+releases:
+- dependencies: []
   name:
     en: Spartacus
     fr: Spartacus
-- dependencies:
-    core: {}
-    dev: {}
-    peer: {}
+- dependencies: []
   name:
     en: Assemblyline
     fr: Assemblyline
