--- a/_data/dependencies/federal/ssc-spc.yaml
+++ b/_data/dependencies/federal/ssc-spc.yaml
@@ -1,168 +1,168 @@
 ---
-- dependencies:
-    core: {}
-    dev: {}
-    peer: {}
+adminCode: ssc-spc
+releases:
+- dependencies: []
   name:
     en: MetPX-Sarracenia
     fr: MetPX-Sarracenia
 - dependencies:
-    core:
-      npm:
-      - '@babel/runtime-corejs2'
-      - ajv
-      - ansi-styles
-      - argparse
-      - asn1
-      - assert-plus
-      - async
-      - asynckit
-      - aws-sign2
-      - aws4
-      - balanced-match
-      - bcrypt-pbkdf
-      - brace-expansion
-      - caseless
-      - chalk
-      - color-convert
-      - color-name
-      - combined-stream
-      - commander
-      - comment-json
-      - concat-map
-      - configstore
-      - core-js
-      - core-util-is
-      - crypto-random-string
-      - cspell
-      - cspell-dict-companies
-      - cspell-dict-cpp
-      - cspell-dict-django
-      - cspell-dict-elixir
-      - cspell-dict-en-gb
-      - cspell-dict-en_us
-      - cspell-dict-fullstack
-      - cspell-dict-golang
-      - cspell-dict-java
-      - cspell-dict-latex
-      - cspell-dict-lorem-ipsum
-      - cspell-dict-php
-      - cspell-dict-python
-      - cspell-dict-rust
-      - cspell-dict-scala
-      - cspell-lib
-      - cspell-trie
-      - dashdash
-      - deep-extend
-      - delayed-stream
-      - dot-prop
-      - ecc-jsbn
-      - entities
-      - escape-string-regexp
-      - esprima
-      - extend
-      - extsprintf
-      - fast-deep-equal
-      - fast-json-stable-stringify
-      - forever-agent
-      - form-data
-      - fs-extra
-      - fs.realpath
-      - gensequence
-      - get-stdin
-      - getpass
-      - glob
-      - graceful-fs
-      - graceful-readlink
-      - har-schema
-      - har-validator
-      - has-flag
-      - http-signature
-      - hunspell-reader
-      - iconv-lite
-      - imurmurhash
-      - inflight
-      - inherits
-      - ini
-      - is-absolute-url
-      - is-obj
-      - is-relative-url
-      - is-typedarray
-      - isemail
-      - isstream
-      - js-xxhash
-      - js-yaml
-      - jsbn
-      - json-parser
-      - json-schema
-      - json-schema-traverse
-      - json-stringify-safe
-      - jsonfile
-      - jsprim
-      - link-check
-      - linkify-it
-      - lodash
-      - lodash.differencewith
-      - lodash.flatten
-      - make-dir
-      - markdown-it
-      - markdown-link-check
-      - markdown-link-extractor
-      - markdownlint
-      - markdownlint-cli
-      - marked
-      - mdurl
-      - mime-db
-      - mime-types
-      - minimatch
-      - minimist
-      - ms
-      - oauth-sign
-      - once
-      - path-is-absolute
-      - performance-now
-      - pify
-      - progress
-      - psl
-      - punycode
-      - qs
-      - rc
-      - regenerator-runtime
-      - request
-      - rxjs
-      - rxjs-stream
-      - safe-buffer
-      - safer-buffer
-      - semver
-      - signal-exit
-      - sprintf-js
-      - sshpk
-      - strip-json-comments
-      - supports-color
-      - tough-cookie
-      - tslib
-      - tunnel-agent
-      - tweetnacl
-      - typedarray-to-buffer
-      - uc.micro
-      - unique-string
-      - universalify
-      - uri-js
-      - uuid
-      - verror
-      - vscode-uri
-      - wrappy
-      - write-file-atomic
-      - xdg-basedir
-      - xregexp
-    dev:
-      npm:
-      - chalk
-      - cspell
-      - glob
-      - markdown-link-check
-      - markdownlint-cli
-    peer: {}
+  - origin: npm
+    type: core
+    values:
+    - '@babel/runtime-corejs2'
+    - ajv
+    - ansi-styles
+    - argparse
+    - asn1
+    - assert-plus
+    - async
+    - asynckit
+    - aws-sign2
+    - aws4
+    - balanced-match
+    - bcrypt-pbkdf
+    - brace-expansion
+    - caseless
+    - chalk
+    - color-convert
+    - color-name
+    - combined-stream
+    - commander
+    - comment-json
+    - concat-map
+    - configstore
+    - core-js
+    - core-util-is
+    - crypto-random-string
+    - cspell
+    - cspell-dict-companies
+    - cspell-dict-cpp
+    - cspell-dict-django
+    - cspell-dict-elixir
+    - cspell-dict-en-gb
+    - cspell-dict-en_us
+    - cspell-dict-fullstack
+    - cspell-dict-golang
+    - cspell-dict-java
+    - cspell-dict-latex
+    - cspell-dict-lorem-ipsum
+    - cspell-dict-php
+    - cspell-dict-python
+    - cspell-dict-rust
+    - cspell-dict-scala
+    - cspell-lib
+    - cspell-trie
+    - dashdash
+    - deep-extend
+    - delayed-stream
+    - dot-prop
+    - ecc-jsbn
+    - entities
+    - escape-string-regexp
+    - esprima
+    - extend
+    - extsprintf
+    - fast-deep-equal
+    - fast-json-stable-stringify
+    - forever-agent
+    - form-data
+    - fs-extra
+    - fs.realpath
+    - gensequence
+    - get-stdin
+    - getpass
+    - glob
+    - graceful-fs
+    - graceful-readlink
+    - har-schema
+    - har-validator
+    - has-flag
+    - http-signature
+    - hunspell-reader
+    - iconv-lite
+    - imurmurhash
+    - inflight
+    - inherits
+    - ini
+    - is-absolute-url
+    - is-obj
+    - is-relative-url
+    - is-typedarray
+    - isemail
+    - isstream
+    - js-xxhash
+    - js-yaml
+    - jsbn
+    - json-parser
+    - json-schema
+    - json-schema-traverse
+    - json-stringify-safe
+    - jsonfile
+    - jsprim
+    - link-check
+    - linkify-it
+    - lodash
+    - lodash.differencewith
+    - lodash.flatten
+    - make-dir
+    - markdown-it
+    - markdown-link-check
+    - markdown-link-extractor
+    - markdownlint
+    - markdownlint-cli
+    - marked
+    - mdurl
+    - mime-db
+    - mime-types
+    - minimatch
+    - minimist
+    - ms
+    - oauth-sign
+    - once
+    - path-is-absolute
+    - performance-now
+    - pify
+    - progress
+    - psl
+    - punycode
+    - qs
+    - rc
+    - regenerator-runtime
+    - request
+    - rxjs
+    - rxjs-stream
+    - safe-buffer
+    - safer-buffer
+    - semver
+    - signal-exit
+    - sprintf-js
+    - sshpk
+    - strip-json-comments
+    - supports-color
+    - tough-cookie
+    - tslib
+    - tunnel-agent
+    - tweetnacl
+    - typedarray-to-buffer
+    - uc.micro
+    - unique-string
+    - universalify
+    - uri-js
+    - uuid
+    - verror
+    - vscode-uri
+    - wrappy
+    - write-file-atomic
+    - xdg-basedir
+    - xregexp
+  - origin: npm
+    type: dev
+    values:
+    - chalk
+    - cspell
+    - glob
+    - markdown-link-check
+    - markdownlint-cli
   name:
     en: GC Architecture
     fr: Architecture GC
