--- a/_data/dependencies/federal/asc-csa.yaml
+++ b/_data/dependencies/federal/asc-csa.yaml
@@ -1,8 +1,7 @@
 ---
-- dependencies:
-    core: {}
-    dev: {}
-    peer: {}
+adminCode: asc-csa
+releases:
+- dependencies: []
   name:
     en: Apogy
     fr: Apogy
