--- a/_data/dependencies/federal/nrc-cnrc.yaml
+++ b/_data/dependencies/federal/nrc-cnrc.yaml
@@ -1,8 +1,7 @@
 ---
-- dependencies:
-    core: {}
-    dev: {}
-    peer: {}
+adminCode: nrc-cnrc
+releases:
+- dependencies: []
   name:
     en: EGSnrc
     fr: EGSnrc
