--- a/_data/software/drupal.yml
+++ b/_data/software/drupal.yml
@@ -17,6 +17,9 @@ licences:
       en: 'https://www.drupal.org/about/licensing#drupal-license'
       fr: 'https://www.drupal.org/about/licensing#drupal-license'
     spdxID: GPL-2.0-or-later
+    level:
+      en: Main license
+      fr: License principale
 name:
   en: Drupal
   fr: Drupal
@@ -97,3 +100,11 @@ administrations:
         date:
           started: '2016-01-01'
           metadataLastUpdated: '2020-02-24'
+  - adminCode: psic-ispc
+    uses:
+      - contact:
+          email: info@psic-ispc.gc.ca
+          name: PSIC-ISPC
+        date:
+          started: '2019-01-01'
+          metadataLastUpdated: '2020-04-07'
